--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">姿态</string>
+    <string name="record">摄影</string>
+    <string name="picture">图片</string>
+    <string name="word">文字</string>
 </resources>
